--- a/html/booking.html
+++ b/html/booking.html
@@ -36,7 +36,7 @@
                 return false;
             }
             else if(k==""){
-                alert("please uplode the payment recipt!);
+                alert("please uplode the payment recipt!");
                 return false;
             }
             else{
